--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sass": "^2.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.0",
     "gatsby-transformer-sharp": "^2.2.0",
@@ -31,7 +32,8 @@
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.8.0"
+    "stylelint-scss": "^3.8.0",
+    "stylelint-webpack-plugin": "^0.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
