--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@storybook/addon-backgrounds": "^5.1.9",
     "axios": "^0.19.0",
+    "babel-jest": "^24.8.0",
+    "babel-preset-gatsby": "^0.2.0",
     "classnames": "^2.2.6",
     "css-loader": "^3.0.0",
     "gatsby": "^2.10.0",
@@ -22,6 +24,7 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.0",
     "gatsby-transformer-sharp": "^2.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -29,6 +32,7 @@
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^10.1.0",
