--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@storybook/addon-backgrounds": "^5.1.9",
+    "@storybook/addon-viewport": "^5.1.9",
     "@svgr/webpack": "^4.3.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
