--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@storybook/addon-backgrounds": "^5.1.9",
+    "@storybook/addon-viewport": "^5.1.9",
     "axios": "^0.19.0",
     "babel-jest": "^24.8.0",
     "babel-preset-gatsby": "^0.2.0",
