--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-markdown": "^4.1.0",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
