--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.1.0",
+    "react-modal": "^3.8.2",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
