--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@storybook/addon-backgrounds": "^5.1.9",
+    "@storybook/addon-centered": "^5.1.9",
     "@storybook/addon-viewport": "^5.1.9",
     "@svgr/webpack": "^4.3.0",
     "axios": "^0.19.0",
@@ -27,6 +28,7 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.0",
     "gatsby-transformer-sharp": "^2.2.0",
+    "get-value": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
