--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
+    "pre-commit": "^1.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-countdown-now": "^2.1.1",
