--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,6 +4,7 @@
     "stylelint-order",
     "stylelint-scss"
   ],
+  "ignoreFiles": ["**/*.js"],
   "rules": {
     "at-rule-no-unknown": [true, {
       "ignoreAtRules": ["include", "mixin", "function", "if", "else", "return", "each", "extend", "for"]
