--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-intersection-observer": "^8.23.0",
     "react-markdown": "^4.1.0",
     "react-modal": "^3.8.2",
     "react-plx": "^1.3.13",
