--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "get-value": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
+    "jsdom": "^15.1.1",
     "node-sass": "^4.12.0",
     "pre-commit": "^1.2.2",
     "prop-types": "^15.7.2",
