--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@storybook/addon-backgrounds": "^5.1.9",
     "@storybook/addon-centered": "^5.1.9",
+    "@storybook/addon-info": "^5.1.9",
     "@storybook/addon-viewport": "^5.1.9",
     "@svgr/webpack": "^4.3.0",
     "axios": "^0.19.0",
@@ -56,6 +57,7 @@
     "@babel/core": "^7.4.5",
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-links": "^5.1.9",
+    "@storybook/addon-storysource": "^5.1.9",
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "babel-loader": "^8.0.6",
