--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@svgr/webpack": "^4.3.0",
     "axios": "^0.19.0",
     "babel-jest": "^24.8.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-gatsby": "^0.2.0",
     "classnames": "^2.2.6",
     "css-loader": "^3.0.0",
@@ -20,6 +21,7 @@
     "gatsby-plugin-hotjar": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-offline": "^2.2.0",
+    "gatsby-plugin-polyfill-io": "^1.1.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sass": "^2.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
@@ -30,6 +32,7 @@
     "gatsby-transformer-sharp": "^2.2.0",
     "get-value": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
+    "intersection-observer": "^0.7.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
     "pre-commit": "^1.2.2",
