--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-plx": "^1.3.13",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "style-loader": "^0.23.1",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
