--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pre-commit": "^1.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
