--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "babel-loader": "^8.0.6",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
     "pre-commit": "^1.2.2",
     "prettier": "^1.18.2"
   },
