--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-plx": "^1.3.13",
     "sass-loader": "^7.1.0",
     "smoothscroll-polyfill": "^0.4.4",
+    "stickybits": "^3.6.6",
     "style-loader": "^0.23.1",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
