--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "serve": "gatsby serve",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -c .storybook --loglevel error --quiet"
+    "build-storybook": "build-storybook -c .storybook --loglevel error --quiet STORYBOOK_META=true"
   },
   "pre-commit": [
     "lint",
