Update readme and package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "joystream",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@storybook/addon-backgrounds": "^5.1.9",
     "@storybook/addon-centered": "^5.1.9",
@@ -94,12 +92,5 @@
     "lint",
     "stylelint",
     "test"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  ]
 }
