--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-gatsby": "^0.2.0",
     "classnames": "^2.2.6",
     "css-loader": "^3.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "gatsby": "^2.10.0",
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-google-analytics": "^2.1.0",
@@ -80,7 +81,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
+    "start": "yarn develop",
     "serve": "gatsby serve",
     "test": "jest",
     "storybook": "NODE_ENV=production start-storybook -p 6006",
