--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "start": "yarn develop",
     "serve": "gatsby serve",
     "test": "jest",
+    "fetch-assets-data": "node ./src/scripts/fetchAssetsData",
     "storybook": "NODE_ENV=production start-storybook -p 6006",
     "build-storybook": "gatsby build && NODE_ENV=production build-storybook -c .storybook --loglevel error --quiet"
   },
