--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-markdown": "^4.1.0",
     "react-modal": "^3.8.2",
     "react-plx": "^1.3.13",
+    "react-spring": "^8.0.27",
     "sass-loader": "^7.1.0",
     "smoothscroll-polyfill": "^0.4.4",
     "stickybits": "^3.6.6",
