--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-intersection-observer": "^8.23.0",
+    "react-loader-spinner": "^3.1.14",
     "react-markdown": "^4.1.0",
     "react-modal": "^3.8.2",
     "react-plx": "^1.3.13",
