--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@svgr/webpack": "^4.3.0",
     "axios": "^0.19.0",
     "babel-jest": "^24.8.0",
-    "babel-preset-gatsby": "^0.2.0",
+    "babel-preset-gatsby": "^0.5.5",
     "classnames": "^2.2.6",
     "css-loader": "^3.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -36,6 +36,7 @@
     "jsdom": "^15.1.1",
     "node-sass": "^4.12.0",
     "pre-commit": "^1.2.2",
+    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "pure-react-carousel": "^1.27.1",
     "rc-slider": "^8.7.1",
@@ -47,7 +48,9 @@
     "react-intersection-observer": "^8.23.0",
     "react-loader-spinner": "^3.1.14",
     "react-markdown": "^4.1.0",
+    "react-media": "^1.10.0",
     "react-modal": "^3.8.2",
+    "react-player": "^2.6.0",
     "react-plx": "^1.3.13",
     "react-spring": "^8.0.27",
     "sass-loader": "^7.1.0",
@@ -69,6 +72,7 @@
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "babel-loader": "^8.0.6",
+    "babel-plugin-prismjs": "^2.0.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
