--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.1.0",
   "dependencies": {
+    "@joystream/types": "^0.14.0",
+    "@polkadot/api": "1.26.1",
     "@storybook/addon-backgrounds": "^5.1.9",
     "@storybook/addon-centered": "^5.1.9",
     "@storybook/addon-info": "^5.1.9",
@@ -35,6 +37,7 @@
     "jest": "^24.8.0",
     "jsdom": "^15.1.1",
     "node-sass": "^4.12.0",
+    "openpgp": "^4.10.10",
     "pre-commit": "^1.2.2",
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
