Implement react-i18next, translate index page to english, update tests and test setup

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-polyfill-io": "^1.1.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-react-i18next": "^1.1.1",
     "gatsby-plugin-sass": "^2.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-stylelint": "^3.2.0",
@@ -32,6 +33,7 @@
     "gatsby-source-filesystem": "^2.1.0",
     "gatsby-transformer-sharp": "^2.2.0",
     "get-value": "^3.0.1",
+    "i18next": "^20.2.1",
     "identity-obj-proxy": "^3.0.0",
     "intersection-observer": "^0.7.0",
     "jest": "^24.8.0",
@@ -48,6 +50,7 @@
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-i18next": "^11.8.12",
     "react-intersection-observer": "^8.23.0",
     "react-loader-spinner": "^3.1.14",
     "react-markdown": "^4.1.0",
