--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-player": "^2.6.0",
     "react-plx": "^1.3.13",
     "react-spring": "^8.0.27",
+    "recharts": "^2.0.9",
     "sass-loader": "^7.1.0",
     "smoothscroll-polyfill": "^0.4.4",
     "stickybits": "^3.6.6",
