--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
   "scripts": {
     "lint": "eslint --ignore-path .gitignore . --ext js --ext jsx",
     "lint:fix": "yarn lint --fix",
-    "stylelint": "stylelint \"src/**/*.scss\" --fix",
+    "stylelint": "stylelint \"src/**/*.scss\"",
+    "stylelint:fix": "stylelint \"src/**/*.scss\" --fix",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
