Add google tag manager, use placeholder id for now

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-google-analytics": "^2.1.0",
+    "gatsby-plugin-google-tagmanager": "^5.11.0",
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-polyfill-io": "^1.1.0",
@@ -41,7 +42,6 @@
     "intersection-observer": "^0.7.0",
     "jest": "^24.8.0",
     "jsdom": "^15.1.1",
-    "sass": "^1.56.1",
     "openpgp": "^4.10.10",
     "pre-commit": "^1.2.2",
     "prismjs": "^1.21.0",
@@ -67,6 +67,7 @@
     "react-spring": "^8.0.27",
     "react-waypoint": "^10.1.0",
     "recharts": "^2.0.9",
+    "sass": "^1.56.1",
     "sass-loader": "^10.4.1",
     "slick-carousel": "^1.8.1",
     "smoothscroll-polyfill": "^0.4.4",
