--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^3.0.0",
     "dotenv": "^16.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "esm": "^3.2.25",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-anchor-links": "^1.1.1",
