--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@storybook/addon-info": "^5.1.9",
     "@storybook/addon-viewport": "^5.1.9",
     "@svgr/webpack": "^4.3.0",
+    "@vimeo/player": "^2.20.1",
     "@widgetbot/embed-api": "^1.1.3",
     "@widgetbot/react-embed": "^1.4.0",
     "axios": "^0.21.1",
