--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "intersection-observer": "^0.7.0",
     "jest": "^24.8.0",
     "jsdom": "^15.1.1",
+    "moment": "^2.29.4",
     "openpgp": "^4.10.10",
     "pre-commit": "^1.2.2",
     "prismjs": "^1.21.0",
@@ -56,6 +57,7 @@
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-highcharts": "^16.1.0",
     "react-i18next": "^11.8.12",
     "react-intersection-observer": "^8.23.0",
     "react-loader-spinner": "^3.1.14",
