--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-source-filesystem": "^2.1.0",
     "gatsby-transformer-sharp": "^2.12.1",
     "get-value": "^3.0.1",
+    "highcharts-react-official": "^3.2.1",
     "i18next": "^20.2.1",
     "identity-obj-proxy": "^3.0.0",
     "intersection-observer": "^0.7.0",
