--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "stylelint:fix": "stylelint \"src/**/*.scss\" --fix",
     "lint:all": "yarn lint && yarn stylelint --fix",
     "build": "NODE_OPTIONS=--openssl-legacy-provider gatsby build",
-    "develop": "NODE_OPTIONS=--openssl-legacy-provider gatsby develop",
+    "develop": "cross-env NODE_OPTIONS=--openssl-legacy-provider gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "yarn develop",
     "serve": "NODE_OPTIONS=--openssl-legacy-provider gatsby serve",
