markdown formatter initial implementation

--- a/package.json
+++ b/package.json
@@ -62,11 +62,11 @@
     "react-intersection-observer": "^8.23.0",
     "react-loader-spinner": "^3.1.14",
     "react-lottie": "^1.2.3",
-    "react-markdown": "^4.1.0",
     "react-media": "^1.10.0",
     "react-modal": "^3.8.2",
     "react-player": "^2.6.0",
     "react-plx": "^2.0.1",
+    "react-remark": "^2.1.0",
     "react-responsive": "^9.0.0-beta.6",
     "react-spring": "^8.0.27",
     "react-waypoint": "^10.1.0",
