--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-intersection-observer": "^8.23.0",
     "react-loader-spinner": "^3.1.14",
     "react-lottie": "^1.2.3",
+    "react-markdown": "4.1.0",
     "react-media": "^1.10.0",
     "react-modal": "^3.8.2",
     "react-player": "^2.6.0",
