--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-plugin-react-i18next": "^1.1.1",
     "gatsby-plugin-sass": "^5.25.0",
     "gatsby-plugin-sharp": "^2.14.4",
+    "gatsby-plugin-split-css": "^2.0.3",
     "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-source-filesystem": "^2.1.0",
